Fixed AvailableEquipment structure
Changed the AvailableEquipment horizontal scroll container (put it in Grid format). Tried making it a bit prettier but still needs a lot of work.

--- a/src/pages/Ilab.css
+++ b/src/pages/Ilab.css
@@ -1,24 +1,26 @@
-.horizontal-scrollable > .row {
+.horizontal-scrollable {
     overflow-x: auto;
     white-space: nowrap;
     width: 80%;
+    padding-left: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: grey;
+    display: flex;
 }
-  
-.horizontal-scrollable > .row > .col-xs-4 {
-    display: inline-block;
-    float: none;
+
+/*making scroll bar nice*/
+::-webkit-scrollbar:horizontal{
+    width: 12px;
+}
+
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
 }
 /* Decorations */
-  
-.col-xs-4 {
-    color: white;
-    font-size: 24px;
-    padding-bottom: 20px;
-    padding-top: 18px;
-    margin: 0 10px;
-}
-  
-.col-xs-4:nth-child(n) {
-    background: grey;
-    border: 1px solid black;
-}
